# xrpl-vl-tool

./: .gitignore  Cargo.toml  README.md  generated_vl_v1-1734796772.json  generated_vl_v2-1734808964.json  generated_vl_v2.json.1733413006
.github/workflows/: release.yml
src/: aws.rs  cli.rs  crypto.rs  enums.rs  errors.rs  lib.rs  main.rs  manifest.rs  secret.rs  structs.rs  time.rs  util.rs  vl.rs
test/data/: generated_unl.json  generated_unl_v2_2.json  manifest.txt  manifest_2.txt
tests/: cli.rs  vl.rs  vl_integration_tests.rs
tests/data/: generated_unl_v1_1.json  generated_unl_v2_1.json  local_keys.json  manifest  manifests_list_with_empty_lines.txt  manifests_list_with_errors.txt  validator_manifest.json  vl.ripple.com.json  vl.xrpl.vision.json  vl.xrplf.org.json  vl_v1_1.json  vl_v1_1_bad_validator_signature.json  vl_v1_wrong_blob.json  vl_v1_wrong_format.json  vl_v1_wrong_manifest_1.json  vl_v1_wrong_manifest_2.json  vl_v1_wrong_master_signature.json  vl_v1_wrong_signing_signature.json  vl_v2_1.json  vl_v2_1_with_blobv2_manifest.json  vl_v2_2.json  vl_v2_wrong_blob.json  vl_v2_wrong_format.json  vl_v2_wrong_manifest_1.json  vl_v2_wrong_manifest_2.json
