[package]
name = "xrpl-unl-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version="4.2", features=["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
url = "2.5.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.92"
base64 = "0.22.1"
sha2 = "0.10.8"
bs58 = { version = "0.5.1", features = ["check"] }
hex = "0.4"
aws-sdk-secretsmanager = "1.52.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
color-eyre = "0.6.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
ed25519 = "2.2.3"
secp256k1 = { version = "0.30.0", features = ["hashes"] }
anstream = "0.6.18"
chrono = "0.4.38"
openssl = { version = "0.10", features = ["vendored"] }
vaultrs = "0.7.1"