[package]
name = "xrpl-vl-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xrpl_vl_tool"
path = "src/main.rs"

[lib]
name = "xrpl_vl_tool"
path = "src/lib.rs"

[dependencies]
clap = { version="4.2", features=["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
url = "2.5.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.93"
base64 = "0.22.1"
sha2 = "0.10.8"
bs58 = { version = "0.5.1", features = ["check"] }
hex = "0.4"
aws-sdk-secretsmanager = "1.53.0"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
color-eyre = "0.6.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
ed25519 = "2.2.3"
secp256k1 = { version = "0.30.0", features = ["hashes"] }
anstream = "0.6.18"
chrono = "0.4.38"
openssl = { version = "0.10", features = ["vendored"] }
vaultrs = "0.7.1"